Closed
Bug 1813976
Opened 3 years ago
Closed 2 years ago
[CTW] Language not reported for images
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
128 Branch
| Tracking | Status | |
|---|---|---|
| firefox128 | --- | fixed |
People
(Reporter: Jamie, Assigned: Jamie)
References
Details
Attachments
(1 file)
STR (with the NVDA screen reader):
- In NVDA menu -> Settings -> Preferences -> Speech:
- Set the Synthesizer to eSpeak NG.
- Enable Automatic language switching.
- Open this test case:
data:text/html,<img alt="123" lang="de" src="https://via.placeholder.com/10x10"> - Press down arrow to read the line.
- Expected: NVDA speaks "einhundertdreiundzwanzig" (123 in German).
- Actual: NVDA speaks "one hundred twenty three" in English.
In bug 1757127, I implemented support for Accessible::Language using the text atributes cache. However, images aren't HyperTextAccessibles, so they don't have text attributes. We'll need special handling for this. We can either:
- Cache language in the main cache for this case.
- Create a text attributes cache with just this one attribute. While a bit wasteful, it does make the retrieval code simpler.
Either way, we'll need a different code path in BundleFieldsForCache.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 1•2 years ago
|
||
This also impacts <input type="radio">.
| Assignee | ||
Updated•2 years ago
|
Assignee: nobody → jteh
| Assignee | ||
Comment 2•2 years ago
|
||
| Assignee | ||
Updated•2 years ago
|
Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b5d106165d75
Support RemoteAccessible::Language on non-HyperText Accessibles. r=morgan
Comment 4•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox128:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•